src/assets/scss/_app.scss
body.nav-open {
  height: 100vh;
  overflow: auto;
  position:fixed;
  top: 0;
  left: 0;
  width: 100vw;
}

body {
  overflow-x: hidden;
}

.app {

  &__content {

    &__container {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;

      &.add {
        opacity: 0;
        transition: opacity 0.5s ease-in-out;

        &.show {
          opacity: 1;
        }
        &.hide {
          opacity: 0;
        }
      }
    }

    &.takeover {
      height: 100vh;
      overflow: hidden;
    }

    &.disabled {
      pointer-events: none;
    }

    &.mobile-no-scroll {
      position: fixed;
      overflow: hidden;
    }
  }


}

